fixed jersey textture

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\ClickSetPosition.cs" />
     <Compile Include="Assets\CoroutineExample.cs" />
     <Compile Include="Assets\CourtMouseClickScript.cs" />
+    <Compile Include="Assets\ExampleClass.cs" />
     <Compile Include="Assets\LightScript.cs" />
     <Compile Include="Assets\Main.cs" />
     <Compile Include="Assets\MouseClickForceScript.cs" />
