FANANDROID-174 Make and miss hoop animations

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\CameraLookAtScript.cs" />
     <Compile Include="Assets\CoroutineExample.cs" />
     <Compile Include="Assets\Main.cs" />
+    <Compile Include="Assets\MakeMissScript.cs" />
     <Compile Include="Assets\SupportBackScript.cs" />
     <Compile Include="Assets\UnityMainThreadDispatcher.cs" />
     <None Include="Assets\3D Text Shader.shader" />
