--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\Scripts\Main.cs" />
     <Compile Include="Assets\Scripts\MakeMissAnimationScript.cs" />
     <Compile Include="Assets\Scripts\MakeMissSoundScript.cs" />
+    <Compile Include="Assets\Scripts\StatsSocket.cs" />
     <Compile Include="Assets\Scripts\SupportBackScript.cs" />
     <Compile Include="Assets\Scripts\UnityMainThreadDispatcher.cs" />
     <None Include="Assets\Shaders\3D Text Shader.shader" />
